# Instagram_Reel_Scraper

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py  scraper.py
